Open links in new window. * Per Eric's suggestion, add noreferrer and target blank. This prevents the external website from reading our browser history information. * Add spacing in the CSS file in order to improve readability. * Replace line break with rem to move responsbility for presentation back into CSS.

--- a/app/assets/stylesheets/partials/_footer.scss
+++ b/app/assets/stylesheets/partials/_footer.scss
@@ -42,9 +42,15 @@
       text-transform: uppercase;
       font-family: "CalibreWeb-Semibold";
     }
+
     h2 {
       color: $color_font-light;
     }
+
+    address {
+      margin-bottom: 1rem;
+    }
+
     @include media(small) {
       margin-bottom: 1rem;
     }
@@ -65,6 +71,7 @@
       height: 36px;
       margin-right: 1em;
     }
+
     @include media(medium) {
       display: block;
       & > *:not(:last-child) {
